Changed the heading to Version Control

--- a/home.html
+++ b/home.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>Welcome to GIT Hub</h3>
+    <h3>Welcome to Version Control</h3>
 </body>
 </html>
