--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <table cellspacing="6" cellpadding="6"> 
-<tr VALIGN=TOP>
+<tr VALIGN=TOP
    <td VALIGN=TOP><img src="/Cormen05.jpg">
    </td> 
    <td align="left" VALIGN=TOP margin="0" padding="0">
